--- a/package.json
+++ b/package.json
@@ -2,22 +2,39 @@
   "name": "travelplanner",
   "version": "1.0.0",
   "description": "A travel planner application with React Big Calendar",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server": "node server/app.js",
+    "lint": "eslint src/ --ext .js,.jsx",
+    "lint:fix": "eslint src/ --ext .js,.jsx --fix",
+    "format": "prettier --write src/",
+    "format:check": "prettier --check src/"
   },
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-big-calendar": "^1.8.6",
-    "date-fns": "^2.30.0"
+    "date-fns": "^2.30.0",
+    "react-router-dom": "^6.20.1",
+    "sqlite3": "^5.1.6",
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
+    "@types/node": "^20.10.0",
+    "@types/sqlite3": "^3.1.8",
     "@vitejs/plugin-react": "^4.2.1",
-    "vite": "^5.0.8"
+    "vite": "^5.0.8",
+    "eslint": "^9.0.0",
+    "prettier": "^3.1.0",
+    "@eslint/js": "^9.33.0",
+    "globals": "^16.3.0"
   }
 }
